[package]
name = "cucumber-reporter"
version = "0.2.7"
edition = "2024"
exclude = [
    "target/*",
]
license = "MIT"
readme = "README.md"
authors = [ "Titanium IT <marcof@titaniumit.nl>"]
description = "html reporter for cucumber-rs"
repository = "https://github.com/MarcoFuykschot/cucumber-reporter.git"

[dependencies]
clap = "4.5.32"
cucumber = "0.21.1"
filenamify = "0.1.2"
gherkin = { version = "0.14.0", features = ["serde"] }
handlebars = { version = "6.3.1", features = ["rust-embed"] }
rust-embed = { version = "8.6.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }

[[test]]
name="main"
harness=false

[build-dependencies]
regex = "1.11.1"
