[package]
name = "cucumber-reporter"
version = "0.2.14"
edition = "2024"
exclude = [
    "target/*",
]
license = "MIT"
readme = "README.md"
authors = [ "Titanium IT <marcof@titaniumit.nl>"]
description = "html reporter for cucumber-rs"
repository = "https://github.com/MarcoFuykschot/cucumber-reporter.git"
categories = ["development-tools::testing"]
keywords = ["cucumber", "testing", "bdd", "reporting","html" ]

[dependencies]
clap = "4.5.54"
cucumber = { version = "0.22.1", features = ["tracing"] }
filenamify = "0.1.2"
gherkin = { version = "0.15.0", features = ["serde"] }
handlebars = { version = "6.3.1", features = ["rust-embed"] }
rust-embed = { version = "8.6.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }

[[test]]
name="main"
harness=false

[build-dependencies]
minify-html = "0.18.1"
regex = "1.11.1"
